# confidential-translator

./: .dockerignore  .gitignore  404.html  Dockerfile  LICENSE  Makefile  README.md  README_CN.md  docker-compose.yml  index.html  patch_vue.py  sitemap.xml
backend/: alter_db.py  confidential-translator.spec  pyproject.toml  test_db.py
backend/app/: __init__.py  main.py
backend/app/api/: export.py  glossary.py  health.py  history.py  models.py  ollama.py  os_integration.py  settings.py  streaming.py  translate.py  validate_language.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  database.py
backend/app/services/: export_service.py  file_service.py  glossary_service.py  history_service.py  ollama_service.py  settings_service.py  translation_service.py
backend/app/static/: index.html
backend/app/static/assets/: DashboardView-C9ONBNBE.js  DashboardView-CIEjrgdf.js  FileTranslateView-CaBO9aDg.js  FileTranslateView-jNOFf0Er.js  GlossaryView-2GWbncS8.js  GlossaryView-DZsmpsE8.js  HistoryView-CDB882Kr.js  HistoryView-Cis96J4g.js  ModelMissingModal-Cvf8k5Dt.js  ModelMissingModal-CwBJTyMx.js  ModelsView-C1Nhbnts.js  ModelsView-CE2uEbXx.js  SettingsView-HUHuI_GF.js  SettingsView-byE7U1DM.js  TranslateView-BU7tixbT.js  TranslateView-DyzjGea_.js  circle-alert-BZq3H2zl.js  circle-alert-pbEzvdPM.js  (+13 more)
backend/app_data/uploads/: 22e73450_DatenBeschreibung.md  f05adfaa_test.md
backend/tests/: __init__.py  conftest.py  test_export_service.py  test_file_service.py  test_history_service.py  test_translate_api.py  test_translation_service.py
(+62 files in other folders)
